--- a/style.css
+++ b/style.css
@@ -92,6 +92,8 @@ main{
     margin-bottom: 30px;
     margin: auto;
     margin-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .titulo-bot{
@@ -103,7 +105,8 @@ p{
     margin-top: 20px;
     font-family: 'Poppins';
     text-align: justify;
-    width: 1000px;
+    max-width: 1000px;
+    min-width: 320px;
     color: white;
 
 }
@@ -142,11 +145,6 @@ img.comandos-png{
 .link-bot{
     margin: 0px;
     padding: 0px;
-}
-
-.dj408{
-    text-align: right;
-    width: 1000px;
 }
 
 ul{
